android overflow scroll fix

--- a/modules/tmp_themes/tmp.css
+++ b/modules/tmp_themes/tmp.css
@@ -295,6 +295,7 @@
 /* CONTENT AREA */
 .ui-content {
     -webkit-overflow-scrolling: touch;
+    overflow-x: visible;
 }
 
 
